--- a/docs/基础/图/存图方式.md
+++ b/docs/基础/图/存图方式.md
@@ -1,4 +1,4 @@
-# 1. 存图方式
+[toc]
 
 存图方式：边数组、邻接矩阵、邻接表（链式前向星）、类Vertex/Edge。
 
@@ -9,7 +9,7 @@
 - 稀疏图；链式前向星
 - 稠密图：邻接矩阵
 
-## 1.1. 边数组 edges
+## 边数组 edges
 
 ```java
 // [[2,1,1],[2,3,1],[3,4,1]] from节点、to节点、权重
@@ -17,7 +17,7 @@ int[][] edges = new int[M][3];
 ```
 只存有连接的边。
 
-## 1.2. 邻接矩阵 w
+## 邻接矩阵 w
 
 ```java
 int[][] w = new int[N][N];
@@ -30,7 +30,7 @@ int[][] w = new int[N][N];
 
 [9.2  图基础操作 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_graph/graph_operations/#921)
 
-## 1.3. 链式 前向星
+## 链式 前向星
 
 
 ```java
