--- a/docs/基础/图/最短路径.md
+++ b/docs/基础/图/最短路径.md
@@ -1,4 +1,4 @@
-# 最短路径
+[toc]
 
 **无权最短路径问题** 用 BFS 求解就行了。
 
@@ -19,12 +19,12 @@
 
 检测负环：只有Bellman-Ford。
 
-## 2.1. Dijkstra
+## Dijkstra
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406221614087.png)
 * Dijkstra贪心，出问题是因为认为本次已经找到了该顶点的最短路径，下次不会再处理它（cur.visited = true）。所有负边存在时，就不会再考虑它。
 * 与之对比，Bellman-Ford 并没有考虑局部距离最小的顶点，而是每次都处理所有边，所以不会出错，当然效率不如 Dijkstra
-### 2.1.1. 邻接矩阵
+### 邻接矩阵
 邻接矩阵 w + vis + dist
 
 1. 为每个节点创建两个属性：访问和距离
@@ -104,7 +104,7 @@ class Solution {
     }
 }
 ```
-### 2.1.2. spa
+### spa
 
 ```java
 // 743. 网络延迟时间
@@ -184,7 +184,7 @@ class Solution {
 ```
 
 
-## 2.2. bellman-ford
+## bellman-ford
 
 edges + dist
 1. 只需要每个节点添加dist：起始节点的距离是0，其他都是INF
@@ -234,7 +234,7 @@ class Solution {
 检测负环，就是再来一轮，如果还能更小，说明有负环。但是不知道具体位置。
 
 
-## 2.3. floyd
+## floyd
 基于w的二维dist 
 1. 直接在邻接矩阵的基础上造二维dist：自身的距离是0，有链接是权重，不连接是INF
 2. 遍历每个源节点和目标节点，松弛操作`dist[i][j] = Math.min(dist[i][j], dist[i][p] + dist[p][j])`
