--- a/docs/基础/排序/01_冒泡.md
+++ b/docs/基础/排序/01_冒泡.md
@@ -1,5 +1,10 @@
+[toc]
 
 ## 基础版
+
+![](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202407112137351.gif)
+
+
 
 * 每轮冒泡不断地比较**相邻**的两个元素，如果它们是逆序的，则交换它们的位置
 * 下一轮冒泡，可以调整未排序的右边界，减少不必要比较
@@ -43,7 +48,7 @@ public int[] sortArray(int[] nums) {
                 x = j;
             }
         }
-        i = x;
+        i = x;		// <<<<<<<<<
     }
     return nums;
 }
@@ -59,7 +64,7 @@ public int[] sortArray(int[] nums) {
                 x = j;
             }
         }
-        i = x - 1;
+        i = x - 1;		// <<<<<<<<<
     }
     return nums;
 }
