--- a/docs/基础/排序/02_选择.md
+++ b/docs/基础/排序/02_选择.md
@@ -1,9 +1,15 @@
+[toc]
+
 ## 🚀选择排序：选最小
+
+![](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202407112137352.gif)
+
+
 
 ```java
 public int[] sortArray(int[] nums) {
     int n = nums.length;
-    // 内循环：找到未排序区间 [i, n-1] 内的最小元素
+    // 内循环：找到未排序区间 [i, n-1] 内的最小元素，默认i最小
     // 外循环: 则i属于[0, n-2]
     for (int i = 0; i < n - 1; i++) 
         // 默认第一个最小
