--- a/docs/基础/排序/03_插入.md
+++ b/docs/基础/排序/03_插入.md
@@ -1,6 +1,12 @@
+[toc]
+
 ## 插入排序
 
 ### 算法流程
+
+![](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202407112137353.gif)
+
+
 
 ![插入排序流程](https://www.hello-algo.com/chapter_sorting/insertion_sort.assets/insertion_sort_overview.png)
 
@@ -11,8 +17,9 @@
 ```java
 // 912. 排序数组
 public int[] sortArray(int[] nums) {
+    int n = nums.length;
     // 内循环待插入 [i...n-1]，i属于[1,n-1], 默认第一个已经不用插入，最后一个还要插入
-    for (int i = 1; i < nums.length; i++) {
+    for (int i = 1; i < n; i++) {
         // 因为会覆盖 i 下标的元素，所以要保存到临时变量
         int base = nums[i];
         // 数组插入: 找到待插入的位置，将其之后的已排序的数组部分后移
@@ -28,22 +35,6 @@ public int[] sortArray(int[] nums) {
         }
     }
     return nums;
-}
-```
-```java
-// 比上面赋值次数更多
-public void sortArray(int[] a){
-    for (int low = 1; low < a.length; low++) {
-        int i = low - 1;    // 遍历检查 low 左边的
-        // 如果左边大于的就右移数组, a[low]就是初始的a[i+1]
-        while (i >= 0 && a[i] > a[i+1]) {
-            // 直接交换
-            int t = a[i];
-            a[i] = a[i+1];
-            a[i+1] = t;
-            i--;
-        }
-    }
 }
 ```
 ### 算法特性
