--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -1,6 +1,8 @@
+[toc]
+
 ## 排序速记
 
-冒泡：j和j+1比较，把最大的移到未排序的末尾。
+冒泡：**j和j+1比较**，把最大的移到未排序的末尾。
 
 ​	（1）两个for循环，内循环是比较。
 
@@ -8,7 +10,7 @@
 
 ​	（3）优化：每轮记住最后一次交换的位置j为x，下一轮i=x。每轮结束[0, x]未排序、[x+1, n-1]已排序。
 
-选择：每轮从未排序选出最小的，交换未排序的首位。
+选择：【已排序】【未排序】**每轮从未排序选出最小的**，交换未排序的首位。
 
 ​	（1）两个for循环，内循环是从未排序中找。
 
@@ -16,13 +18,13 @@
 
 ​	（3）如果不原地 k=i，那么交换未排序的首位
 
-插入：每轮从未排序“随机”选一个，插入到已排序中。
+插入：【已排序】【未排序】每轮从未排序“随机”选一个，插入到已排序中。
 
-​	（1）for + while，内循环是待插入
+​	（1）for + while
 
-​	（2）待插入部分是 [i, n-1]，i属于[1,n-1], 默认第一个已经不用插入，最后一个还要插入
+​	（2）for：未排序部分是 [i, n-1]，i属于[1,n-1], 默认第一个已经不用插入，最后一个还要插入
 
-​	（3）保持i处的变量base，将i左边元素右移，最后将base填入nums[j+1]。
+​	（3）while：将未排序的首个元素i前移，找到已排序中大于它的元素，就将其右移，最后将i填入nums[j+1]。
 
 
 
