--- a/docs/基础/树/基本定义.md
+++ b/docs/基础/树/基本定义.md
@@ -1,12 +1,4 @@
-- [1. 结点定义](#1-结点定义)
-- [2. 前序遍历](#2-前序遍历)
-  - [2.1. 递归](#21-递归)
-  - [2.2. 迭代](#22-迭代)
-  - [2.3. Morris 遍历](#23-morris-遍历)
-- [3. 前、中、后](#3-前中后)
-- [4. 后序遍历](#4-后序遍历)
-
----
+[toc]
 
 # 1. 结点定义
 ```cpp
