--- a/docs/基础/数/数之和.md
+++ b/docs/基础/数/数之和.md
@@ -1,11 +1,4 @@
-- [1.两数之和](#1两数之和)
-- [167.两数之和 II](#167两数之和-ii)
-- [n数和](#n数和)
-  - [15.三数之和](#15三数之和)
-  - [18.四数之和](#18四数之和)
-
-
----
+[toc]
 
 ## 1.两数之和
 
