--- a/docs/基础/树/遍历/层序遍历.md
+++ b/docs/基础/树/遍历/层序遍历.md
@@ -1,3 +1,5 @@
+[toc]
+
 https://leetcode.cn/problems/binary-tree-level-order-traversal/solutions/244853/bfs-de-shi-yong-chang-jing-zong-jie-ceng-xu-bian-l/
 
 队列，先进先出。
