--- a/docs/背/八股/背.md
+++ b/docs/背/八股/背.md
@@ -1,28 +1,4 @@
-- [【二分查找】](#二分查找)
-- [target在两边还是中间](#target在两边还是中间)
-- [leftmost和rightmost的标准版返回什么，找到了怎么办](#leftmost和rightmost的标准版返回什么找到了怎么办)
-- [leftmost和rightmost的替身版返回什么、谁是大于等于小于等于](#leftmost和rightmost的替身版返回什么谁是大于等于小于等于)
-- [【链表】](#链表)
-- [链表的遍历条件是什么](#链表的遍历条件是什么)
-- [链表的插入和删除需要做什么](#链表的插入和删除需要做什么)
-- [删除结点](#删除结点)
-- [插入结点](#插入结点)
-- [删除倒数结点](#删除倒数结点)
-- [反转链表的方式](#反转链表的方式)
-- [【递归】](#递归)
-- [斐波那契数列的第一项元素是多少，第二项元素是多少？](#斐波那契数列的第一项元素是多少第二项元素是多少)
-- [爬楼梯是从斐波那契数列的第几项作为开始？](#爬楼梯是从斐波那契数列的第几项作为开始)
-- [汉诺塔的递归规则是什么？用到了几次递归？](#汉诺塔的递归规则是什么用到了几次递归)
-- [杨辉三角的边界条件是什么](#杨辉三角的边界条件是什么)
-- [【排序】](#排序)
-- [插入排序的有序部分是头部还是尾部](#插入排序的有序部分是头部还是尾部)
-- [【树】](#树)
-- [树的层序遍历、深度遍历用栈还是队列](#树的层序遍历深度遍历用栈还是队列)
-- [树的深度遍历的规则](#树的深度遍历的规则)
-- [【图】](#图)
-
-
----
+[toc]
 
 ## 【二分查找】
 ## target在两边还是中间
@@ -58,7 +34,7 @@ rightmost: `if <`, 右移`else`；`return i-1`
 单链表：
 - 删除头结点：判断真头非空 + 更新头 `head=head.next`。
 - 删除下标：
-    
+  
     通用。找到前一个结点`index-1`，`pre.next = pre.next.next`。临界，index超界，要么是`index-1`本身超界，要么是`index-1`得到尾结点。
     
     临界。index=0，对应删除头结点；
