背包问题大突破：终于搞懂一维数组了

--- a/docs/基础/动态规划/背包问题.md
+++ b/docs/基础/动态规划/背包问题.md
@@ -1,18 +1,16 @@
 [toc]
 
 ## 背包问题
-背包问题：分数背包(贪心）、0-1背包（动态规划）、完全/无限背包（动态规划）。
+背包问题：
 
-> 分数背包：贪心策略，选额单价最高。
-
-> 0-1背包：整个物品。上一行
-
-> 完全背包：整个 + 无限物品。本行
+- 分数背包(贪心）：物品可分，选额单价最高。
+- 0-1背包（动态规划）：整个物品。上一行
+- 完全背包（动态规划）：整个 + 无限物品。本行
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231645317.png)
 
-## 分数背包（贪心）
-按照单价逆序。
+## 分数背包
+按照单价从高到低。
 
 遍历装入背包，判断拿完和拿不完。	
 
@@ -58,23 +56,29 @@ double fractionalKnapsack(Item[] items, int[] wgt, int[] val, int cap) {
 
 ## 01背包：最大价值
 
-不需要物品价值排序。
+对着每个物品，进行 `[0...cap]` 的依次计算。
 
-对着每个物品，进行 `[0, 最大背包容量]` 的依次计算。
-
-`dp[ n 或 n + 1][cap + 1]`: 都是 **cap + 1**。因为`c-w[i]`会等于0，就需要cap=0的情况
+- 因为`c-w[i]`会等于0，就需要cap=0的情况
+- `dp[ n 或 n + 1][cap + 1]`: 都是 **cap + 1**。
 
 ![image-20240812231037699](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408122310736.png)
 
 ### n x (cap+1)
 
-`dp[i][c]`表示`[0...i]`个物品一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
+`int[][] dp = new int[n][cap + 1];`
 
-- dp[0]表示第一个物品，dp[n-1]表示所有物品。
+- `dp[i][c]`表示**前i+1个物品**（`w[0...i]`）一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
+- 待求解的是 `dp[n-1,cap]` ，因此需要一个尺寸为 (n)×(cap+1) 的二维 dp 表。
+
+- `dp[0]`表示第一个物品，`dp[n-1]`表示所有物品。
+- 背包容量必须包含0和n，`dp[i][0]`表示没装东西，`dp[i][cap]`表示最大容量。
 
 
 
-边界条件 `列首dp[x][0]=0，首行dp[0][x]=0||v[0]`
+边界条件:
+
+- 列首：`dp[x][0]=0`，表示背包容量0时，价值为0
+- 首行：`dp[0][x]=0||v[0]`，**讨论第一个物品**，表示第一个物品装不入时为0，装的进去时为它的价值。
 
 
 
@@ -84,81 +88,65 @@ $dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i] \\ \max(dp[i-1][c]
 
 
 
-最终返回的是`dp[n-1][cap]`（不是`[cap-1]`）
-
-​	物品可以从0开始，[0, n-1]；
-
-​	背包必须包含0和n，0表示没装东西，n表示最大容量。
+最终返回的是`dp[n-1][cap]`
 
 
 ```java
 /* 0-1 背包：动态规划 */
-public int pack01(int[] w, int[] v, int n, int cap) {
+public int pack01(int[] w, int[] v, int cap) {
+    int n = w.length;
     int[][] dp = new int[n][cap + 1];
+
     // 列首空：当背包容量为0时，最大价值是0
     // for (int i = 0; i < n; i++) {
     //    dp[i][0] = 0;
     // }
-    // 首行
+    // 首行：讨论第一个物品
     for (int c = 0; c <= cap; c++) {
         if (c >= w[0]) {
             dp[0][c] = v[0];
         }
     }
-    // 从第二个物品开始
+    
+    // 从格子[1,1]开始，第二个物品
     for (int i = 1; i < n; i++) {
         for (int c = 1; c <= cap; c++) {
-            if (c >= w[i]) {
-                // 装的下：不选和选物品 i 这两种方案的较大值
-                dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i]] + v[i]);
-            } else{
-	            // 装不下：则不选物品 i
+            // 装不下：则不选物品 i
+            if (c < w[i]) {
                 dp[i][c] = dp[i - 1][c];
+            } 
+            // 装的下：不选和选物品 i 这两种方案的较大值
+            else{
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i]] + v[i]);
             }
         }
     }
     return dp[n - 1][cap];
 }
-
-/* 0-1 背包：空间优化后的动态规划 */
-public int pack01(int[] w, int[] v, int n, int cap) {
-    int[] dp = new int[cap + 1];
-    // 列首空 dp[0] = 0;
-    // 首行
-    for (int c = 0; c <= cap; c++) {
-        if (c >= w[0]) {
-            dp[c] = v[0];
-        }
-    }
-    for (int i = 1; i < n; i++) {
-        for (int c = cap; c >= 0; c--) {
-	        // 倒序遍历!!!!! 因为正序修改后面依赖的上行历史数据，变成了本行的最新数据
-            // 装不下：则不变
-            // 装的下：不选和选物品 i 这两种方案的较大值
-            if (c >= w[i]) {
-	            dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
-            }
-        }
-    }
-    return dp[cap];
-}
 ```
 
 ### 🚀(n+1) x (cap+1) 推荐
 
-`dp[i][c]`表示前i个物品（`w[0...i-1]`）一起考虑后对应的不同容量背包`[0...c]`下的最大价值。
+`int[][] dp = new int[n + 1][cap + 1]`
 
-​	背包`dp[i]`含0和n，0表示没装东西，n表示最大容量
+- `dp[i][c]`表示**前i个物品**（`w[0...i-1]`）一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
+- 待求解的是 `dp[n,cap]` ，因此需要一个尺寸为 (n+1)×(cap+1) 的二维 dp 表。
+- `dp[0]`表示无物品，自然价值是0；`dp[n]`是考虑所有物品。
+
+- 背包容量必须包含0和n，`dp[i][0]`表示没装东西，`dp[i][cap]`表示最大容量。
+
+
+
+多了一行的意义：让第一个物品无须特别讨论，可以融入到递推公式中。
 
 
 
 边界条件（刚好都是默认0）
 
-​	背包为0：`列首dp[x][0]=0`，
+- 列首：`dp[x][0]=0`，表示背包容量0时，价值为0
+- 首行： `dp[0][x]=0`，表示没有物品时，价值为0
 
-​	第1个物品装得下时`dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i-1]] + v[i-1])`会去判断第0个边界物品: 则让 `首行dp[0][x]=0`
-
-
+#### i从1开始，对应物品w[i-1]
 
 递推公式 
 
@@ -169,69 +157,94 @@ $$
 - dp[i]是尝试装入第i个物品的dp结果。
 - w和v是i-1，因为第i个物品的索引是i-1.
 
-
-
-最终返回的是`dp[n][cap]`（不是`[n-1]`）
-
 ```java
 public int pack01(int[] w, int[] v, int cap) {
     int n = w.length;
-    int[][] dp = new int[n + 1][cap + 1];	// n + 1个物品，cap+1个容量【dp的范围是背包的最大容量】
+    int[][] dp = new int[n + 1][cap + 1];	// n + 1个物品，cap+1个容量
+    
     // 【两个循环：一个遍历物品，一个遍历背包大小】
     for (int i = 1; i <= n; i++) {		// 从第1个物品开始，包括n
         for (int c = 1; c <= cap; c++) {
-            if (c >= w[i-1]) {
-                // 装的下：不选和选物品 i 这两种方案的较大值
-                dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i-1]] + v[i-1]);
-            } else{  
-	            // 装不下：则不选物品 i
+            // 装不下：则不选物品 i
+            if (c < w[i-1]) {
                 dp[i][c] = dp[i - 1][c];
+            } 
+            // 装的下：不选和选物品 i 这两种方案的较大值
+            else{  
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i-1]] + v[i-1]);
             }
         }
     }
     return dp[n][cap];
 }
+```
 
-/* 0-1 背包：空间优化后的动态规划 */
-public int pack01(int[] w, int[] v, int n, int cap) {
-    int[] dp = new int[cap + 1];		// dp的范围是背包的最大容量
-    // 【两个循环：一个遍历物品，一个【倒序】遍历背包大小】
-    for (int i = 1; i <= n; i++) {
-        for (int c = cap; c >= w[i-1]; c--) {		// c >= w[i-1] 把if判断融合进去：背白装不下的，就不变
-            dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
+#### i从0开始，对应物品w[i]
+
+```java
+public int pack01(int[] w, int[] v, int cap) {
+    int n = w.length;
+    int[][] dp = new int[n + 1][cap + 1];
+    
+    // 【两个循环：一个遍历物品，一个遍历背包大小】
+    for (int i = 0; i < n; i++) {		// 从第1个物品开始，包括n
+        for (int c = 1; c <= cap; c++) {
+            // 装不下：则不选物品 i
+            if (c < w[i]) {
+                dp[i + 1][c] = dp[i][c];
+            } 
+            // 装的下：不选和选物品 i 这两种方案的较大值
+            else{  
+                dp[i + 1][c] = Math.max(dp[i][c], dp[i][c - w[i]] + v[i]);
+            }
+        }
+    }
+    return dp[n][cap];
+}
+```
+
+#### 理顺 i + 1, i- 1
+
+（1）当前行和上一行都差1，`dp[i][...]` 和 `dp[i-1][...]`，`dp[i+1][...]` 和 `dp[i][...]`
+
+（2）dp数组比物品数组多一个
+
+i从1开始，`dp[i]`  和 `w[i-1]` 
+
+i从0开始，`dp[i+1]` 和 `w[i]`
+
+（3）为什么 n x(cap + 1)就不考虑？
+
+因为物品w和dp数组是对齐的。
+
+### 空间优化 (cap +1)
+
+都是同一行，递推公式不涉及i和i-1，就不需要特别讨论第一个物品来满足递推公式。
+
+```java
+public int pack01(int[] w, int[] v, int cap) {
+    int n = w.length;
+    int[] dp = new int[cap + 1];
+
+    for (int i = 0; i < n; i++) {
+        // 倒序：防止影响历史。
+        for (int c = cap; c >= 1; c--) {
+            // 装不下就维持不变
+          	// 装的下：不选和选物品 i 这两种方案的较大值
+			if(c >= w[i]){
+            	dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);    
+            }
         }
     }
     return dp[cap];
 }
-```
 
-### i+1
-
-```java
 public int pack01(int[] w, int[] v, int cap) {
     int n = w.length;
-    int[][] dp = new int[n + 1][cap + 1];	// n + 1个物品，cap+1个容量【dp的范围是背包的最大容量】
-    // 【两个循环：一个遍历物品，一个遍历背包大小】
-    for (int i = 0; i < n; i++) {		// 从第1个物品开始，包括n
-        for (int c = 1; c <= cap; c++) {
-            if (c >= w[i]) {
-                // 装的下：不选和选物品 i 这两种方案的较大值
-                dp[i + 1][c] = Math.max(dp[i][c], dp[i][c - w[i]] + v[i]);
-            } else{  
-	            // 装不下：则不选物品 i
-                dp[i + 1][c] = dp[i][c];
-            }
-        }
-    }
-    return dp[n][cap];
-}
+    int[] dp = new int[cap + 1];
 
-/* 0-1 背包：空间优化后的动态规划 */
-public int pack01(int[] w, int[] v, int n, int cap) {
-    int[] dp = new int[cap + 1];		// dp的范围是背包的最大容量
-    // 【两个循环：一个遍历物品，一个【倒序】遍历背包大小】
     for (int i = 0; i < n; i++) {
-        for (int c = cap; c >= w[i]; c--) {		// c >= w[i] 把if判断融合进去：背白装不下的，就不变
+        for (int c = cap; c >= w[i]; c--) {		// c >= w[i]：意思是 c < w[i-1] 装不下的就不变
             dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
         }
     }
@@ -285,48 +298,47 @@ public int pack01(int[] w, int cap) {
 
 ### n x (cap+1)
 
+边界条件:
+
+- 列首：`dp[x][0]=0`，表示背包容量0时，价值为0
+- 首行：`dp[0][x]=0 || dp[0][c - w[0]] + v[0]`，表示第一个物品装不入时为0，装的进去时 **可以重复选取**。
+
+递推公式 
 $$
 dp[i, c] = \max(dp[i-1, c], dp[i, c - w[i]] + v[i])%
 $$
 
 ```java
 /* 完全背包：动态规划 */
-public long packInfinity(int[] w, int[] v, int n, int cap) {
+public long packInfinity(int[] w, int[] v, int cap) {
+    int n = w.length;
     long[][] dp = new long[n][cap + 1];
-    // 列首是0，使用默认
-    // 第一行
-    for (int c = 1; c <= cap; c++) {
-        if (w[0] <= c) {
-            dp[0][c] = dp[0][c - w[0]] + v[0];
+
+    // 列首空：当背包容量为0时，最大价值是0
+    // for (int i = 0; i < n; i++) {
+    //    dp[i][0] = 0;
+    // }
+    // 首行
+    for (int c = 0; c <= cap; c++) {
+        if (c >= w[0]) {
+            dp[0][c] = dp[0][c - w[0]] + v[0];		// <<<<<<< 可以重复选取
         }
     }
+    
+    // 从格子[1,1]开始
     for (int i = 1; i < n; i++) {
         for (int c = 1; c <= cap; c++) {
-	        if (w[0] <= c) {            
-                // 装的下：不选和选物品 i 这两种方案的较大值
-                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i]] + v[i]);
-            } else {
+            // 装不下：则不选物品 i
+            if (c < w[i]) {
                 dp[i][c] = dp[i - 1][c];
+            } 
+            // 装的下：不选和选物品 i 这两种方案的较大值
+            else{
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i]] + v[i]);
             }
         }
     }
     return dp[n - 1][cap];
-}
-
-/* 因为都是同一行，所以既不需要倒序，而且也不需要初始化第一行。 */
-public long packInfinity(int[] w, int[] v, int n, int cap) {
-    long[] dp = new long[cap + 1];
-    // 列首是0，使用默认
-    for (int i = 0; i < n; i++) {
-        for (int c = 1; c <= cap; c++) {
-            // 装不下就维持不变
-            if (w[i] <= c) {
-                // 装的下：不选和选物品 i 这两种方案的较大值
-                dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
-            }
-        }
-    }
-    return dp[cap];
 }
 ```
 
@@ -341,32 +353,65 @@ $$
 
 
 ```java
-public long packInfinity(int[] w, int[] v, int n, int cap) {
+public long packInfinity(int[] w, int[] v, int cap) {
+    int n = w.length;
     long[][] dp = new long[n + 1][cap + 1];
+    
     for (int i = 1; i <= n; i++) {
         for (int c = 1; c <= cap; c++) {
-	        if (c >= w[i-1]) {            
-                // 装的下：不选和选物品 i 这两种方案的较大值
-                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i-1]] + v[i-1]);
-            } else {
+            // 装不下：则不选物品 i
+	        if (c < w[i-1]) {            
                 dp[i][c] = dp[i - 1][c];
+            } 
+            // 装的下：不选和选物品 i 这两种方案的较大值
+            else {
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i-1]] + v[i-1]);
             }
         }
     }
     return dp[n][cap];
 }
+```
 
-public long packInfinity(int[] w, int[] v, int n, int cap) {
+### 空间优化 (cap +1)
+
+同样，都是同一行，就不需要特别讨论第一个物品。
+
+此外，正序遍历背包容量。
+
+```java
+public long packInfinity(int[] w, int[] v, int cap) {
+    int n = w.length;
     long[] dp = new long[cap + 1];
-    // 【正序】遍历背包
-    for (int i = 1; i <= n; i++) {
+    
+    // 从第一个物品开始
+    for (int i = 0; i < n; i++) {
+        // 正序，因为需要最新的
+        for (int c = 1; c <= cap; c++) {
+            // 装不下就维持不变
+          	// 装的下：不选和选物品 i 这两种方案的较大值
+            if (c >= w[i]) {
+                dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
+            }
+        }
+    }
+    return dp[cap];
+}
+
+public long packInfinity(int[] w, int[] v, int cap) {
+    int n = w.length;
+    long[] dp = new long[cap + 1];
+
+    for (int i = 0; i < n; i++) {
         for (int c = w[i-1]; c <= cap; c++) {		// int c = w[i-1] 把if判断的小于则保持不变，融合进去
-            dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
+            dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
         }
     }
     return dp[cap];
 }
 ```
+
+
 
 ### 练习
 
