--- a/docs/基础/动态规划/定义/2.md
+++ b/docs/基础/动态规划/定义/2.md
@@ -1,3 +1,7 @@
+[toc]
+
+## 杂
+
 动态规划：递推 + 记忆。它将一个问题分解为一系列更小的子问题，并通过存储子问题的解来避免重复计算
 
 
@@ -73,4 +77,50 @@
 ​	先子问题分解，从顶至底
 
 ​	按照“暴力搜索 → 记忆化搜索 → 动态规划”的顺序实现更加符合思维习惯。
+
+
+
+
+
+## 上楼梯
+
+- 最大方案数量： `dp[i] = dp[i−1]+dp[i−2]`
+
+  [小米25模拟爬楼梯.md](..\..\题\笔试\真题\小米25模拟爬楼梯.md) 
+
+- 最小代价：`dp[i] = min(dp[i - 1], dp[i - 2]) + cost[i];`
+
+- 但不能连续两轮跳 1 阶的最大方案数量：`dp[n] = dp[n, 1] + dp[n, 2]`
+
+  `dp[i, j]`表示上一次从i-j阶跳了j阶到了当前i阶。
+
+  ![image-20240812221238128](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408122212198.png)
+
+​	[198. 打家劫舍.md](..\..\题\leetcode\198. 打家劫舍.md): 不能连续跳1阶，但可以跳任意阶。 
+
+
+
+## 走格子
+
+​	最大方案数量 
+
+​		[62. 不同路径.md](..\..\题\leetcode\62. 不同路径.md) : `dp[i][j] = dp[i-1][j] + dp[i][j-1]`。`dp[n][m]`，没有业务需求，就可以一一对应。`dp[n][m]`表示从(0,0)到(n,m)的方案总数。 
+
+​		 [63. 不同路径 II.md](..\..\题\leetcode\63. 不同路径 II.md) ：指定数组的路障
+
+​		[P8707 [蓝桥杯 2020 省 AB1] 走方格.md](..\..\题\其他\P8707 [蓝桥杯 2020 省 AB1] 走方格.md) ：路障在行列的偶数
+
+​	最小代价
+
+​		 [64. 最小路径和.md](..\..\题\leetcode\64. 最小路径和.md) 
+
+四个考虑
+
+问题：01还是无限，最大价值还是刚好价值，价值还是方案
+
+`dp[i][j]`表示什么
+
+base case
+
+递推公式
 
