--- a/docs/基础/动态规划/定义/背包问题.md
+++ b/docs/基础/动态规划/定义/背包问题.md
@@ -146,7 +146,11 @@ public int pack01(int[] w, int[] v, int cap) {
 - 列首：`dp[x][0]=0`，表示背包容量0时，价值为0
 - 首行： `dp[0][x]=0`，表示没有物品时，价值为0
 
-#### i从1开始，对应物品w[i-1]
+#### i从1开始
+
+考虑的是dp角度，则dp[i]
+
+然后，物品是 w[i-1]
 
 递推公式 
 
@@ -179,7 +183,11 @@ public int pack01(int[] w, int[] v, int cap) {
 }
 ```
 
-#### i从0开始，对应物品w[i]
+#### i从0开始
+
+考虑的是物品角度，w[i]。
+
+则dp[i+1]
 
 ```java
 public int pack01(int[] w, int[] v, int cap) {
@@ -187,8 +195,8 @@ public int pack01(int[] w, int[] v, int cap) {
     int[][] dp = new int[n + 1][cap + 1];
     
     // 【两个循环：一个遍历物品，一个遍历背包大小】
-    for (int i = 0; i < n; i++) {		// 从第1个物品开始，包括n
-        for (int c = 1; c <= cap; c++) {
+    for (int i = 0; i < n; i++) {
+        for (int c = 1; c <= cap; c++) {		
             // 装不下：则不选物品 i
             if (c < w[i]) {
                 dp[i + 1][c] = dp[i][c];
@@ -217,9 +225,15 @@ i从0开始，`dp[i+1]` 和 `w[i]`
 
 因为物品w和dp数组是对齐的。
 
+（4）为什么空间优化是统一的？
+
+因为没有dp的干扰，只有i=0时w[i]、i=1时w[i-1]的简单关系。
+
 ### 空间优化 (cap +1)
 
-都是同一行，递推公式不涉及i和i-1，就不需要特别讨论第一个物品来满足递推公式。
+都是同一行，递推公式不涉及i和i-1，就不像二维数组一样要特别讨论第一个物品来满足递推公式。
+
+而且刚好第一个物品计算时 dp[x]都是0，递归公式用于第一个物品的结果正确，就不需要特别讨论。
 
 ```java
 public int pack01(int[] w, int[] v, int cap) {
@@ -288,7 +302,7 @@ public int pack01(int[] w, int cap) {
 
  [洛谷P1164 小A点菜.md](..\..\题\其他\洛谷P1164 小A点菜.md) 
 
-## 完全背包
+## 完全背包：最大价值
 
 **每个物品可以重复选取**，所以看的是本行的最大价值（最新的）
 
@@ -419,11 +433,21 @@ public long packInfinity(int[] w, int[] v, int cap) {
 
  [洛谷P1853 投资的最大效益.md](..\..\题\其他\洛谷P1853 投资的最大效益.md)  
 
-【模板】 [322. 零钱兑换.md](..\..\题\leetcode\322. 零钱兑换.md) : 最小求解、刚好
 
-【模板】[洛谷P2918 USACO08NOV Buying Hay S.md](..\..\题\其他\洛谷P2918 USACO08NOV Buying Hay S.md) : 最小求解、至少
 
-【模板】 [518. 零钱兑换 II.md](..\..\题\leetcode\518. 零钱兑换 II.md) 刚好价值的方案
+## 变体
+
+0-1背包
+
+
+
+完全背包：
+
+【模板】 [322. 零钱兑换.md](..\..\..\题\leetcode\322. 零钱兑换.md) : **求最小价值**
+
+【模板】[洛谷P2918 USACO08NOV Buying Hay S.md](..\..\..\题\其他\洛谷P2918 USACO08NOV Buying Hay S.md) : 最小求解、至少
+
+【模板】 [518. 零钱兑换 II.md](..\..\..\题\leetcode\518. 零钱兑换 II.md) 刚好价值的方案
 
 ## Todo
 
