--- a/docs/题/leetcode/322. 零钱兑换.md
+++ b/docs/题/leetcode/322. 零钱兑换.md
@@ -1,18 +1,25 @@
+[toc]
 
-## 动态
+> 给你一个整数数组 `coins` ，表示不同面额的硬币；以及一个整数 `amount` ，表示总金额。
+>
+> 你可以认为每种硬币的数量是无限的。
+>
+> 计算并返回可以凑成总金额所需的 **最少的硬币个数** 。如果没有任何一种硬币组合能组成总金额，返回 `-1` 。
 
-完全背包
-
-**刚好是总额的最少的硬币个数**
+## 动态: 完全背包
 
 $$
 dp[i][c] = 
 \begin{cases} 
 dp[i-1][c] & \text{if } c < w[i-1] \\
-\min(dp[i-1][c], 1) & \text{if } c = w[i-1] \\
-\min(dp[i-1][c], dp[i][c - w[i-1]] + 1) & \text{if } c > w[i-1]
+\min(dp[i-1][c], dp[i][c - w[i-1]] + 1) & \text{if } c >= w[i-1]
 \end{cases}
 $$
+
+求最小价值。
+
+- dp 初始化最大值，这样 min才找到最小的。
+- 当 c = 0时，dp[c] 是0，不需要硬币。也符合递推公式中，当 c = w[i-1]时，$dp[i][c-w[i-1]]+1 = dp[i][0] + 1 = 1$
 
 ```java
 class Solution {
@@ -36,17 +43,21 @@ class Solution {
 
 
 class Solution {
+    public static int MAX = Integer.MAX_VALUE >>> 1;
+
     public int coinChange(int[] coins, int amount) {
         int n = coins.length;
         int[] dp = new int[amount + 1];
-        Arrays.fill(dp, 0x3f3f3f3f);
+        
+        Arrays.fill(dp, MAX);
         dp[0] = 0;
-        for (int i = 1; i <= n; i++) {
-            for (int c = coins[i - 1]; c <= amount; c++) {
-                dp[c] = Math.min(dp[c], dp[c - coins[i - 1]] + 1);
+
+        for (int i = 0; i < n; i++) {
+            for (int c = coins[i]; c <= amount; c++) {
+                dp[c] = Math.min(dp[c], dp[c - coins[i]] + 1);
             }
         }
-        return dp[amount] == 0x3f3f3f3f ? -1 : dp[amount];
+        return dp[amount] == MAX ? -1 : dp[amount];
     }
 }
 ```
