--- a/docs/题/leetcode/518. 零钱兑换 II.md
+++ b/docs/题/leetcode/518. 零钱兑换 II.md
@@ -3,7 +3,7 @@
 刚好价值的方案
 
 $$
-dp[i, a] = dp[i-1, a] + dp[i, a - coins[i-1]]
+dp[i, a] = dp[i-1, a] + dp[i, a - coins[i]]
 $$
 
 
@@ -13,10 +13,13 @@ class Solution {
     public int change(int amount, int[] coins) {
         int n = coins.length;
         int[] dp = new int[amount + 1];
-        dp[0] = 1;      // 用于 c == coins[i-1] 时的情况，dp[0] 表示 只有自己的一种解法
-        for (int i = 1; i <= n; i++) {
-            for (int c = coins[i - 1]; c <= amount; c++) {
-                dp[c] = dp[c] + dp[c - coins[i - 1]];
+
+        // 用于 c == coins[i-1] 时的情况，dp[0] 表示 只有自己的一种解法
+        dp[0] = 1;
+
+        for (int i = 0; i < n; i++) {
+            for (int c = coins[i]; c <= amount; c++) {
+                dp[c] = dp[c] + dp[c - coins[i]];
             }
         }
         return dp[amount];
