--- a/docs/题/其他/洛谷P1049 装箱问题.md
+++ b/docs/题/其他/洛谷P1049 装箱问题.md
@@ -1,9 +1,15 @@
+> 有一个箱子容量为 *V*，同时有 *n* 个物品，每个物品有一个体积。
+>
+> 现在从 *n* 个物品中，任取若干个装入箱内（也可以不取），使箱子的剩余空间最小。输出这个最小值。
+
 求箱子最小剩余空间。
 
-将物品的价值设其同体积，那么等同于求最大背包价值。最后 cap - 背包价值 就是最小剩余空间。
+本题没有物体价值，我们假设物品的价值设其同体积，那么就可以转化求最大背包价值。
+
+最后 cap - 背包价值 就是最小剩余空间。
 
 ```java
-// https://www.luogu.com.cn/problem/P1049	
+// https://www.luogu.com.cn/problem/P1048	采药
 import java.util.*;
 
 public class Main {
@@ -17,7 +23,7 @@ public class Main {
             i++;
         }
         Solution solution = new Solution();
-        int res = solution.pack01(w, n, cap);
+        int res = solution.pack01(w, w, cap);
         System.out.println(cap - res);
 
     }
@@ -26,20 +32,13 @@ public class Main {
 class Solution {
     // n个物品，cap背包容量
     /* 0-1 背包：动态规划 */
-    public int pack01(int[] w, int n, int cap) {
+    public int pack01(int[] w, int[] v, int cap) {
+        int n = w.length;
         int[] dp = new int[cap + 1];
-        // 行
-        for (int c = 0; c <= cap; c++) {
-            if (w[0] <= c) {
-                dp[c] = w[0];
-            }
-        }
-        for (int i = 1; i < n; i++) {
-            for (int c = cap; c >= 0; c--) {
-                if (w[i] <= c) {
-                    // 装的下：不选和选物品 i 这两种方案的较大值
-                    dp[c] = Math.max(dp[c], dp[c - w[i]] + w[i]);
-                }
+        
+        for (int i = 0; i < n; i++) {
+            for (int c = cap; c >= w[i]; c--) {
+                dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
             }
         }
         return dp[cap];
