--- a/docs/基础/动态规划/题型/股票.md
+++ b/docs/基础/动态规划/题型/股票.md
@@ -4,7 +4,7 @@
 
 
 
- [122. 买卖股票的最佳时机 II.md](..\..\题\leetcode\122. 买卖股票的最佳时机 II.md) : 动态规划；贪心
+ [122. 买卖股票的最佳时机 II.md](..\..\..\题\leetcode\122. 买卖股票的最佳时机 II.md) : 动态规划；贪心
 
 
 
