--- a/docs/题/leetcode/101.对称二叉树.md
+++ b/docs/题/leetcode/101.对称二叉树.md
@@ -1,58 +1,49 @@
-给你一个二叉树的根节点 root ， 检查它是否轴对称。
+[toc]
 
 
+
+> 给你一个二叉树的根节点 root ， 检查它是否轴对称。
+>
 > 示例 1：
-
-![picture 4](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406122250713.png)  
-
-输入：root = [1,2,2,3,4,4,3]
-输出：true
+>
+> ![picture 4](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406122250713.png)输入：root = [1,2,2,3,4,4,3]
+>
+> 输出：true
+>
 > 示例 2：
-
-
-输入：root = [1,2,2,null,3,null,3]
-输出：false
-
-![picture 5](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406122250768.png)  
-
-提示：
-
-树中节点数目在范围 `[1, 1000]` 内
-`-100 <= Node.val <= 100`
+>
+> 输入：root = [1,2,2,null,3,null,3]
+>
+> 输出：false
+>
+> ![picture 5](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406122250768.png)  保证树非空
 
 
 
-# 递归
+## 递归
+
+其实就是基于 [100. 相同的树.md](100. 相同的树.md) 
+
+修改一下对称规则。	
+
+![image-20250220221417245](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202502202214561.png)
 
 ```java
 class Solution {
-  	public boolean isSymmetric (TreeNode root) {
-        if(root == null || root.left == root.right){
-            return true;
-        }
-        return sym(root.left, root.right);
+    public boolean isSymmetric(TreeNode root) {
+        return isSame(root.left, root.right);
     }
-    
-    public boolean sym(TreeNode left, TreeNode right){
-        // 都空
-        if(left == null && right == null){
-            return true;
+
+    public boolean isSame(TreeNode p, TreeNode q){
+        if(p == null || q == null){
+            return p == q;
         }
-        // 有一个非空，另一个空
-        else if(left == null || right == null){
-            return false;
-        }
-        // 都非空，看值
-        else if(left.val == right.val){
-            return sym(left.left, right.right) && sym(left.right, right.left);
-        }
-        // 不空，值不等
-        return false;
+        return p.val == q.val && isSame(p.left, q.right) && isSame(p.right, q.left);
     }
 }
 ```
 
-# bfs + 空值
+## bfs + 空值
 
 利用 val 的取值范围：-100 <= Node.val <= 100
 
