--- a/docs/题/leetcode/104. 二叉树的最大深度.md
+++ b/docs/题/leetcode/104. 二叉树的最大深度.md
@@ -1,12 +1,21 @@
 > 本题求的是：从**根节点**到最远叶子节点的最长路径上的节点数
 
+## 自底向上
+
+分析子问题：max(左/右)+1
+
+边界条件就是没有左右时，返回0.
+
+![image-20250220212048089](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202502202120310.png)
+
+
+
 递归函数返回的是**当前节点到其最远叶子节点的路径的节点个数**（子树的深度）：
 
 - 空：0
 
 - 一般：max(左/右)+1
 
-  叶子：1
 
 那么只需要传入root为起始，即为所求
 
@@ -20,6 +29,29 @@ class Solution {
         int left = maxDepth(root.left);
         int right = maxDepth(root.right);
         return Math.max(left, right) + 1;			// 最大的左右孩子的深度，再加上自身
+    }
+}
+```
+
+## 自顶向下
+
+每遇到一个，修改全局变量。
+
+```java
+class Solution {
+    int depth = 0;
+    public int maxDepth(TreeNode root) {
+        f(root, 0);
+        return depth;
+    }
+
+    public void f(TreeNode root, int cnt){
+        if(root == null){
+            return;
+        }
+        depth = Math.max(depth, cnt + 1);
+        f(root.left, cnt + 1);
+        f(root.right, cnt + 1);
     }
 }
 ```
