--- a/docs/基础/排序/01_冒泡.md
+++ b/docs/基础/排序/01_冒泡.md
@@ -15,7 +15,8 @@
 ```java
 // 912. 排序数组
 public int[] sortArray(int[] nums) {
-    for(int i = nums.length - 1; i > 0; i--){
+    int n = nums.length;
+    for(int i = n - 1; i > 0; i--){
         for(int j = 0; j < i; j++){
             if(nums[j] > nums[j+1]){
                 swap(nums, j, j+1);
@@ -31,17 +32,17 @@ public int[] sortArray(int[] nums) {
 ```
 ## 🚀改进版：记录待排序数组边界
 
-用`x`记录最后一次交换的位置 `j`（`j+1`是已排序好，`j`还是未排序好的区域），那么下一轮会比较 `j-1` 和 `j`
+用`x`记录最后一次交换的位置 `j`（每轮结束[0, x]未排序、[x+1, n-1]已排序）
 
-- 要么是`j < i`,  `i = x` 
-- 要么是`j <= i`，`i = x - 1`
+- 要么是`j < i`,  排序范围是 [0, i]，则 `i = x` 
+- 要么是`j <= i`，排序范围是[0, i + 1]，则`i = x - 1`
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201437851.png)
 ```java
 public int[] sortArray(int[] nums) {
     int n = nums.length;
     for(int i = n - 1; i > 0;){				// 不写 i--
-        int x = 0;							// 控制的是每轮的右边界 i
+        int x = 0;							// 【注意不睡 int x = i，而是0！！】
         for(int j = 0; j < i; j++){
             if(nums[j] > nums[j+1]){
                 swap(nums, j , j+1);
