--- a/docs/基础/排序/03_插入.md
+++ b/docs/基础/排序/03_插入.md
@@ -12,34 +12,34 @@
 
 - 将数组分为已排序部分和待插入部分：`[0 .. i-1]`  `[i.. n-1]`。则i的下标 `[1, n-1]`
 - 每次从待插入区域取出第一个元素, 即i下标，插入到已排序区域
-- 插入到已排序区域：从i倒着往前，检查 i 左边的元素 `int j = i - 1;`，如果左边大于 i 所在的元素 `nums[j] > base`，就右移数组 `nums[j+1] = nums[j]`
+- 插入到已排序区域：从i倒着往前，检查 i 左边的元素 `int j = i - 1;`，如果左边大于 i 所在的元素 `nums[j] > t`，就右移数组 `nums[j+1] = nums[j]`
 
 ```java
-// 912. 排序数组
-public int[] sortArray(int[] nums) {
-    int n = nums.length;
-    // 内循环待插入 [i...n-1]，i属于[1,n-1], 默认第一个已经不用插入，最后一个还要插入
-    for (int i = 1; i < n; i++) {
-        // 因为会覆盖 i 下标的元素，所以要保存到临时变量
-        int base = nums[i];
-        // 数组插入: 找到待插入的位置，将其之后的已排序的数组部分后移
-        int j = i - 1;
-        while (j >= 0 && nums[j] > base) {          // nums[j] >= base 就是不稳定了
-            nums[j + 1] = nums[j];
-            j--;
+class Solution {
+    public int[] sortArray(int[] nums) {
+        int n = nums.length;
+        // 内循环：未排序区间 [i, n-1]
+        // 外循环: 则i属于[0, n-1]
+        for(int i = 0; i < n; i++){
+        	// 因为会覆盖 i 下标的元素，所以要保存到临时变量
+            int t = nums[i];
+            int j = i - 1;
+            while(j >=0 && nums[j] > t){		// nums[j] >= t 就是不稳定了
+                nums[j+1] = nums[j];
+                j--;
+            }
+            nums[j+1] = t;	// 当前是不符合的位置 nums[j] <= t，所以插入到下一个位置
         }
-        // 原位置不插
-        if (j != i - 1) {
-            // 当前是不符合的位置 nums[j] <= base，所以插入到下一个位置
-            nums[j + 1] = base;
-        }
+        return nums;
     }
-    return nums;
 }
 ```
 ### 算法特性
 
-- **时间复杂度为 $O(n^2)$、自适应排序**：在最差情况下，每次插入操作分别需要循环 $n - 1$、$n-2$、$\dots$、$2$、$1$ 次，求和得到 $(n - 1) n / 2$ ，因此时间复杂度为 $O(n^2)$ 。在遇到有序数据时，插入操作会提前终止。当输入数组完全有序时，插入排序达到最佳时间复杂度 $O(n)$ 。
+- **时间复杂度为 $O(n^2)$、自适应排序**：
+  - 在最差情况下，每次插入操作分别需要循环 $n - 1$、$n-2$、$\dots$、$2$、$1$ 次，求和得到 $(n - 1) n / 2$ ，因此时间复杂度为 $O(n^2)$ 。
+  - 当输入数组完全有序时，不插入，只遍历，达到最佳时间复杂度 $O(n)$ 。
+
 - **空间复杂度为 $O(1)$、原地排序**：指针 $i$ 和 $j$ 使用常数大小的额外空间。
 - **稳定排序**：在插入操作过程中，我们会将元素插入到相等元素的右侧，不会改变它们的顺序。
 
