--- a/docs/基础/排序/05_归并.md
+++ b/docs/基础/排序/05_归并.md
@@ -14,48 +14,47 @@
 [5,1] [1] [2,0] [0]
 [5] [1] [1] [2] [0] [0]
 ```
-🚀额外数组每次分配
+#### 🚀额外数组每次分配
 
 ```java
 class Solution {
     public int[] sortArray(int[] nums) {
-        mergeSort(nums, 0, nums.length - 1);
+        int n = nums.length;
+        mergeSort(nums, 0, n - 1);
         return nums;
     }
 
-    public void mergeSort(int[] nums, int i, int j) {
-        if (i >= j) {   // i==j就行，当子数组长度为 1 时终止递归。但有的傻逼题，传空数组，j = -1，那么就 i>=j
-            return;
+    public void mergeSort(int[] nums, int l, int r) {
+        if (l < r) {    // l==r 当子数组长度为 1 时终止递归。
+            int m = l + r >> 1;
+            mergeSort(nums, l, m);
+            mergeSort(nums, m + 1, r);
+            // 再从底向上合并
+            merge(nums, l, m, r);
         }
-        int m = i + j >>> 1;
-        mergeSort(nums, i, m);
-        mergeSort(nums, m + 1, j);
-        // 再从底向上合并
-        merge(nums, i, m, j);
     }
 
     public void merge(int[] nums, int i, int m, int j) {
-        int[] temps = new int[j - i + 1];
+        int[] t = new int[j - i + 1];
         int p1 = i, p2 = m + 1, p = 0;
         while (p1 <= m && p2 <= j) {
-            if (nums[p1] <= nums[p2]) {
-                temps[p++] = nums[p1++];
+            if (nums[p1] < nums[p2]) {
+                t[p++] = nums[p1++];
             } else {
-                temps[p++] = nums[p2++];
+                t[p++] = nums[p2++];
             }
         }
         if (p1 <= m) {
-            System.arraycopy(nums, p1, temps, p, m - p1 + 1);
+            System.arraycopy(nums, p1, t, p, m - p1 + 1);
         } else {
-            System.arraycopy(nums, p2, temps, p, j - p2 + 1);
+            System.arraycopy(nums, p2, t, p, j - p2 + 1);
         }
-        System.arraycopy(temps, 0, nums, i, j - i + 1);
+        System.arraycopy(t, 0, nums, i, j - i + 1);
     }
 }
 ```
 
-
-额外数组公用
+#### 额外数组公用
 
 ```java
 class Solution {
