--- a/docs/基础/排序/06_堆.md
+++ b/docs/基础/排序/06_堆.md
@@ -6,23 +6,22 @@
 
 **大顶堆堆顶最大，小顶堆堆顶最小**。**而不能保证堆的左右子树是有序的**
 
-* 在大顶堆中，任意父节点的值 > 子节点的值
-* 而小顶堆中，任意父节点的值 < 子节点的值
+* 在大顶堆中，任意父节点的值 >= 子节点的值
+* 而小顶堆中，任意父节点的值 <= 子节点的值
 
 
 
 堆使用的是**完全二叉树**（从索引 0 开始存储节点数据）
-* 节点 $i$ 的左子节点为 $2i+1$，右子节点为 $2i+2$。根节点0，左右子节点1和2，2i必有，直接+1、+2
+* 节点 $i$ 的左子节点为 $2i+1$，右子节点为 $2i+2$。【根节点0，左右子节点1和2，2i必有，直接+1、+2】
 
-* 节点 $i$ 的父节点为 $(i-1)/2$ 向下取整。 (1-1)/2=0，1/2-1=-1
+* 节点 $i$ 的父节点为 $(i-1)/2$ 向下取整。 【2i+2先÷2再-1可以，当2i+1就会少一个】
 
 * 非叶子节点范围为 $[0, size/2-1]$
 
   ​	最后一个叶节点的父节点，即为最后一个非叶子节点。
 
-  ​	最后节点的下标i，则父节点为 (i-1)/2。
+  ​	最后节点的下标是 size-1，则父节点为 (size-1-1)/2 = size/2-1
 
-  ​	i = size -1，则(size-1-1)/2 = size/2-1
 
 ![不重要](https://www.hello-algo.com/chapter_heap/heap.assets/min_heap_and_max_heap.png)
 
@@ -146,18 +145,21 @@ class Solution {
 
 ### 下潜 down
 
-建堆Floyd
+涉及
 
-弹出元素 poll
+- 建堆Floyd
+
+- 弹出元素 poll
 
 ```java
-// 递归
+// 大顶堆的下潜
 private void down(int parent) {
     // parent自身和左右孩子left,right
     int left = parent * 2 + 1;
     int right = left + 1;
+    // 选出最大值的索引为max
     int max = parent;
-    // 选出最大值的索引为max, 因为是下潜所以递归边界是 < size
+    // 孩子可能超出递归边界，所以 < size
     if (left < size && nums[left] > nums[max]) {
         max = left;
     }
@@ -199,11 +201,13 @@ private void down(int parent) {
 
 ### 上浮 up
 
-建堆威廉姆斯算法
+涉及：
 
-插入元素 offer
+- 建堆威廉姆斯算法
+- 插入元素 offer
 
 ```java
+// 大顶堆的上浮
 private void up(int child){
     int parent = (child - 1 ) / 2;
     if(parent >= 0 && nums[parent] < nums[child]){
@@ -235,7 +239,7 @@ public void offer(int num) {
 
 ```java
 public int poll() {
-    int peek = nums[0];		// 记录堆顶
+    int top = nums[0];		// 记录堆顶
     
     // (1)交换：交换堆顶和最后一个元素
     swap(0, size - 1);
@@ -244,7 +248,7 @@ public int poll() {
     // (3)下潜：重新下潜堆顶 
     down(0);
     
-    return peek;
+    return top;
 }
 ```
 
@@ -286,13 +290,15 @@ public int poll() {
 
 
 
-完整写法
+### 🚀完整写法
 
 ```java
 // 912. 排序数组
 class Solution {
     public int[] sortArray(int[] nums) {
+        // 建立大顶堆
         MaxHeap heap = new MaxHeap(nums);
+        // 出堆
         for(int i= 0; i < nums.length - 1; i++){
             heap.poll();
         }
@@ -338,19 +344,19 @@ class Solution {
         }
         
         public int poll() {
-            int peek = nums[0];
+            int top = nums[0];
             
             swap(0, size - 1);
             size--;
             down(0);
             
-            return peek;
+            return top;
         }
     }
 }
 ```
 
-简化写法
+### 简化写法
 
 ```java
 /* 堆的长度为 n ，从节点 i 开始，从顶至底堆化 */
