--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -4,49 +4,45 @@
 
 冒泡：**j和j+1比较**，把最大的移到未排序的末尾。
 
-​	（1）两个for循环，内循环是比较。
+​	（1）两个for循环。
 
-​	（2）swap（j,j + 1），则j是[0，n-2]...[0, 0]，j<i，则 i从n-1开始，到1结束。
+​	（2）内循环是从0开始swap（j,j + 1），则j是[0，n-2]...[0, 0]，j<i，则外循环的 i从n-1开始，到1结束。
 
 ​	（3）优化：每轮记住最后一次交换的位置j为x，下一轮i=x。每轮结束[0, x]未排序、[x+1, n-1]已排序。
 
-选择：【已排序】【未排序】**每轮从未排序选出最小的**，交换未排序的首位。
+选择：【已排序】【未排序】**每轮从未排序选出最小的，交换未排序的首位**。
 
-​	（1）两个for循环，内循环是从未排序中找。
+​	（1）两个for循环。
 
-​	（2）未排序部分为 [i, n-1]，且默认i是初始最小，则i属于 [0, n-2]。在未排序部分中找到元素最小的索引 k
+​	（2）内循环在未排序部分为 **[i, n-1]**中找，**外循环控制未排序部分的起始位置**，**则i属于 [0, n-1]**。在未排序部分中找到元素最小的索引 min.
 
-​	（3）如果不原地 k=i，那么交换未排序的首位
+​	（3）如果不原地 min=i，那么交换未排序的首位
 
-插入：【已排序】【未排序】每轮从未排序“随机”选一个，插入到已排序中。
+插入：【已排序】【未排序】**每轮从未排序选第一个，插入到已排序中**。
 
 ​	（1）for + while
 
-​	（2）for：未排序部分是 [i, n-1]，i属于[1,n-1], 默认第一个已经不用插入，最后一个还要插入
+​	（2）同样未排序部分为 **[i, n-1]**中找，**外循环控制未排序部分的起始位置**，**则i属于 [0, n-1]**
 
 ​	（3）while：将未排序的首个元素i前移，找到已排序中大于它的元素，就将其右移，最后将i填入nums[j+1]。
 
 
 
-快速：以哨兵值排序当前区间，左边的小于哨兵，右边的大于哨兵，再以哨兵位置递归左边子区间和右边子区间
+快速：以哨兵值排序当前区间，左边的小于哨兵，右边的大于哨兵
 
-​	（1）一个quickSort递归函数，一个partition根据哨兵排序和返回哨兵位置，
+​	（1）一个quickSort递归函数，传入左边子区间和右边子区间 [l, r]
 
-​	（2）quickSort的哨兵位置不参与下一次递归 `[i, p-1], [p+1, j]`，quickSort 只剩一个元素 i>=j 就退出，
+​	（2）默认第一个是哨兵，左右双指针ij排序，先找右边的j再找左边的i，最后 i == j，填充哨兵。
 
-​	（3）partion 的while循环 i < j 起码两个元素
+​	（3）下一次递归 `[l, i-1], [i+1, r]`，哨兵i不参与。
 
-​	（4）partition 先找到j给nums[i]，再找到 i 给 nums[j]。最后 i == j，赋值谁都行。
-
-归并：先划分两个mergeSort，再合并merge。
+归并：m=l+r>>>1, 先划分两个mergeSort `[l, m], [m+1, r]`，再合并merge。
 
 ​	（1）一个mergeSort递归函数，一个merge工具函数来合并数组。
 
-​	（2）mergeSort 只有一个元素 i>=j 就退出
+​	（2）mergeSort 的mid参与排序，因为它的中间位置不像哨兵的已经有序。
 
-​	（3）mergeSort 的mid参与排序，因为它的中间位置不像哨兵的已经有序。
-
-​	（4）merge的拷贝是数组合并剩下的，mergeSort的拷贝是覆盖原数组。
+​	（4）merge中向拷贝数组合并剩下的，再拷贝临时数组覆盖原数组。
 
 堆：先建大顶堆，再出堆。
 
@@ -61,8 +57,6 @@
 ​		size--：表示删除元素
 
 ​		下潜：重新下潜堆顶
-
-​	（3）得到升序数组。 
 
 
 
