--- a/docs/基础/排序/02_选择.md
+++ b/docs/基础/排序/02_选择.md
@@ -7,23 +7,27 @@
 
 
 ```java
-public int[] sortArray(int[] nums) {
-    int n = nums.length;
-    // 内循环：找到未排序区间 [i, n-1] 内的最小元素，默认i最小
-    // 外循环: 则i属于[0, n-2]
-    for (int i = 0; i < n - 1; i++) 
-        // 默认第一个最小
-        int min = i;
-        for (int j = i + 1; j < n; j++) {
-            if (nums[j] < nums[min]) {
-                min = j;
+class Solution {
+    public int[] sortArray(int[] nums) {
+        int n = nums.length;
+        // 内循环：找到未排序区间 [i, n-1] 内的最小元素
+	    // 外循环: 则i属于[0, n-1]
+        for(int i = 0; i < n; i++){
+	        // 默认第一个最小
+            int min = i;
+            for(int j = i; j < n; j++){
+                if(nums[j] < nums[min]){
+                    min = j;
+                }
+            }
+            if(min != i){
+                int t = nums[min];
+                nums[min] = nums[i];
+                nums[i] = t;
             }
         }
-        if (min != i) {
-            swap(nums, min, i);
-        }
+        return nums;
     }
-    return nums;
 }
 ```
 
