--- a/docs/基础/排序/04_快速.md
+++ b/docs/基础/排序/04_快速.md
@@ -1,3 +1,5 @@
+[toc]
+
 ## 🚀双指针：最能记住的
 
 ![image-20240921093636233](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409210936314.png)
@@ -13,23 +15,26 @@
 // 912. 排序数组
 class Solution {
     public int[] sortArray(int[] nums) {
-        quickSort(nums, 0, nums.length - 1);
+        int n = nums.length;
+        quickSort(nums, 0, n - 1);
         return nums;
     }
 
     public void quickSort(int[] nums, int l, int r) {
-        if (l < r) {
+        if (l < r) {			// i==j 只有一个则不排序。
             int i = l, j = r;			// i和j表示空缺位，开始nums[i]是空缺位
             int base = nums[i];			// 第一个选择为哨兵。
             while (i < j) {
-                while (i < j && nums[j] >= base) {	   	// j：找到右边不该存在的[小于]元素
+                // j：找到右边不该存在的[小于等于]元素
+                while (i < j && nums[j] >= base) {	   	
                     j--;
                 }
                 if (i < j) {		
                     nums[i] = nums[j];					// 拿j填补空缺 i
                 }
-
-                while (i < j && nums[i] <= base) {		// i：找到左边不该存在的[大于]元素
+				
+                // i：找到左边不该存在的[大于等于]元素
+                while (i < j && nums[i] <= base) {		
                     i++;
                 }
                 if (i < j) {
