--- a/docs/题/leetcode/111. 二叉树的最小深度.md
+++ b/docs/题/leetcode/111. 二叉树的最小深度.md
@@ -1,6 +1,6 @@
 [toc]
 
-## 自底向上
+## 自底向上 普通递归
 
 递归表示以节点*node*为根的**子树**的最小深度。
 
@@ -37,7 +37,7 @@ class Solution {
 
 
 
-## 自顶向下
+## 自顶向下 dfs
 
 ```java
 class Solution {
