--- a/docs/题/leetcode/112. 路径总和.md
+++ b/docs/题/leetcode/112. 路径总和.md
@@ -1,4 +1,62 @@
-# bfs
+[toc]
+
+
+## dfs
+
+dfs模板写法
+
+```java
+// 112. 路径总和
+class Solution {
+    int targetSum;
+    int sum;
+    boolean ans;
+    public boolean hasPathSum(TreeNode root, int targetSum) {
+        this.targetSum = targetSum;
+        dfs(root);
+        return ans;
+    }
+
+    public void dfs(TreeNode root){
+        if(root == null){
+            return;
+        }
+        sum += root.val;
+        if(root.left == root.right && sum == targetSum){
+            ans = true;
+            return;		// 本题是只要有一个满足就返回
+        }
+        dfs(root.left);
+        dfs(root.right);
+        sum -= root.val;
+    }
+}
+```
+
+递归写法：往下传递的是残差。
+
+```java
+// 112. 路径总和
+class Solution {
+    public boolean hasPathSum(TreeNode root, int targetSum) {
+        if (root == null) {
+            return false;
+        }
+        targetSum -= root.val;
+        // 叶子节点，递归结束
+        if (root.left == null && root.right == null) {
+            return targetSum == 0;
+        }
+        // 非叶子节点，继续递归
+        boolean left = hasPathSum(root.left, targetSum);
+        boolean right = hasPathSum(root.right, targetSum);
+        return left || right;
+    }
+}
+```
+
+
+## bfs
 
 把入队时记录和出队时记录玩明白了，两个都用上了！
 
@@ -48,56 +106,4 @@ class Solution {
 ```
 
 
-
-# dfs
-
-dfs模板写法
-
-```java
-// 112. 路径总和
-class Solution {
-    int targetSum;
-    int sum;
-    boolean ans;
-    public boolean hasPathSum(TreeNode root, int targetSum) {
-        this.targetSum = targetSum;
-        dfs(root);
-        return ans;
-    }
-
-    public void dfs(TreeNode root){
-        if(root == null){
-            return;
-        }
-        sum += root.val;
-        if(root.left == null && root.right == null && sum == targetSum){
-            ans = true;
-            return;		// 本题是只要有一个满足就返回
-        }
-        dfs(root.left);
-        dfs(root.right);
-        sum -= root.val;
-    }
-}
-```
-
-递归写法：往下传递的是残差。
-
-```java
-// 112. 路径总和
-class Solution {
-    public boolean hasPathSum(TreeNode root, int targetSum) {
-        if(root == null){
-            return false;
-        }
-        // 叶子节点才判断
-        if(root.left == null && root.right == null){
-            return targetSum == root.val;
-        }
-        boolean left = hasPathSum(root.left, targetSum - root.val);
-        boolean right = hasPathSum(root.right, targetSum - root.val);
-        return left || right;
-    }
-}
-```
 
