--- a/docs/题/leetcode/113. 路径总和 II.md
+++ b/docs/题/leetcode/113. 路径总和 II.md
@@ -1,4 +1,42 @@
-# bfs
+[toc]
+
+## dfs
+
+```java
+// 113. 路径总和 II
+class Solution {
+    List<List<Integer>> res = new ArrayList<>();
+    int targetSum;
+    int sum;
+    List<Integer> path = new ArrayList<>();
+
+    public List<List<Integer>> pathSum(TreeNode root, int targetSum) {
+        this.targetSum = targetSum;
+        dfs(root);
+        return res;
+    }
+
+    public void dfs(TreeNode root) {
+        if (root == null) {
+            return;
+        }
+        path.add(root.val);
+        sum += root.val;
+        if (root.left == root.right && sum == targetSum) {
+            res.add(new ArrayList<>(path));
+            // 【这里不返回，我们要找到所有满足的lu'jing】
+        }
+        dfs(root.left);
+        dfs(root.right);
+        sum -= root.val;
+        path.remove(path.size() - 1);
+    }
+}
+```
+
+
+
+## bfs
 
 在入队时添加当前节点与上一节点的关系，以供路径倒推。使用map来存储关系。
 
@@ -56,37 +94,4 @@ class Solution {
 ```
 
 
-
-# dfs
-
-```java
-// 113. 路径总和 II
-class Solution {
-    List<List<Integer>> ret = new LinkedList<List<Integer>>();
-    Deque<Integer> path = new LinkedList<Integer>();
-    int targetSum;
-    int sum;
-
-    public List<List<Integer>> pathSum(TreeNode root, int targetSum) {
-        this.targetSum = targetSum;
-        dfs(root);
-        return ret;
-    }
-
-    public void dfs(TreeNode root) {
-        if (root == null) {
-            return;
-        }
-        path.offerLast(root.val);
-        sum += root.val;
-        if (root.left == null && root.right == null && targetSum == sum) {
-            ret.add(new LinkedList<Integer>(path));
-        }
-        dfs(root.left);
-        dfs(root.right);
-        sum -= root.val;
-        path.pollLast();
-    }
-}
-```
 
