--- a/docs/题/leetcode/129. 求根节点到叶节点数字之和.md
+++ b/docs/题/leetcode/129. 求根节点到叶节点数字之和.md
@@ -1,4 +1,35 @@
-# bfs
+[toc]
+
+## dfs
+
+```java
+class Solution {
+    int res = 0;
+    int sum = 0;
+    public int sumNumbers(TreeNode root) {
+        dfs(root);
+        return res;
+    }
+
+    public void dfs(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        sum = sum * 10 + root.val;
+        if(root.left == root.right){
+            res += sum;
+        }
+        dfs(root.left);
+        dfs(root.right);
+        sum = (sum - root.val) / 10;
+    }
+}
+```
+
+
+
+## bfs
 
 ```java
 // 129. 求根节点到叶节点数字之和
@@ -35,56 +66,6 @@ class Solution {
             total += num;
         }
         return total;
-    }
-}
-```
-
-# dfs
-
-```java
-// 129. 求根节点到叶节点数字之和
-class Solution {
-    public int sumNumbers(TreeNode root) {
-        return dfs(root, 0);
-    }
-
-    public int dfs(TreeNode root, int sum) {
-        if (root == null) {
-            return 0;
-        }
-        sum = sum * 10 + root.val;
-        if (root.left == null && root.right == null) {
-            return sum;
-        } else {
-            return dfs(root.left, sum) + dfs(root.right, sum);
-        }
-
-    }
-}
-```
-
-```java
-// 129. 求根节点到叶节点数字之和
-class Solution {
-    int ans = 0;
-
-    public int sumNumbers(TreeNode root) {
-        dfs(root, 0);
-        return ans;
-    }
-
-    public void dfs(TreeNode root, int sum) {
-        if (root == null) {
-            return;
-        }
-        sum = sum * 10 + root.val;
-        if (root.left == null && root.right == null) {
-            ans += sum;
-            return;
-        }
-
-        dfs(root.left, sum);
-        dfs(root.right, sum);
     }
 }
 ```
