--- a/docs/题/leetcode/104. 二叉树的最大深度.md
+++ b/docs/题/leetcode/104. 二叉树的最大深度.md
@@ -4,15 +4,17 @@
 
 
 
-## 自底向上
+## 自底向上：普通递归
 
-递归函数返回的是**当前节点到其最远叶子节点的路径的节点个数**。
+递归函数返回的是**其最远叶子节点到当前节点的路径的节点个数**（比~~当前节点到其最远叶子节点的路径的节点个数~~更能表达自底向上的意思）。
 
-边界1：当前空，那么节点数量是0
 
-一般子问题：当前非空，左右非空，max(左/右)+1
 
-​	正好，可以解决当前非空，左右有空都空的情况。
+- 一般子问题：当前非空，左右非空，max(左/右)+1
+
+- 边界1：当前空，那么节点数量是0
+
+- 而当前非空，左右有空都空的，正好在此题下可以归入到一般子问题中。
 
 ![image-20250220212048089](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202502202120310.png)
 
@@ -20,6 +22,7 @@
 // 104. 二叉树的最大深度
 class Solution {
     public int maxDepth(TreeNode root) {
+        // 表示叶子节点的子节点的边界
         if(root == null){
             return 0;
         }
@@ -30,7 +33,7 @@ class Solution {
 }
 ```
 
-## 自顶向下
+## 自顶向下：dfs
 
 自顶向下，更类似dfs深度遍历。
 
@@ -38,21 +41,27 @@ class Solution {
 
 ```java
 class Solution {
-    int ans = 0;
+    int res = 0;
+    int cnt = 0;
     public int maxDepth(TreeNode root) {
-        dfs(root, 0);
-        return ans;
+        dfs(root);
+        return res;
     }
 
-    public void dfs(TreeNode root, int cnt){
-        // 边界条件
+    public void dfs(TreeNode root){
         if(root == null){
             return;
         }
-        
-        ans = Math.max(ans, cnt + 1);
-        dfs(root.left, cnt + 1);
-        dfs(root.right, cnt + 1);
+        // 当前节点不是null， +1
+        cnt += 1;
+        // 当前节点，无孩子，是叶子节点
+        if(root.left == root.right){
+            res = Math.max(res, cnt);
+        }
+        dfs(root.left);
+        dfs(root.right);
+        cnt -= 1;
+
     }
 }
 ```
