--- a/docs/题/leetcode/111. 二叉树的最小深度.md
+++ b/docs/题/leetcode/111. 二叉树的最小深度.md
@@ -1,10 +1,77 @@
 [toc]
 
+## 自顶向下 dfs
+
+```java
+class Solution {
+    int res = Integer.MAX_VALUE;
+    int cnt = 0;
+    public int minDepth(TreeNode root) {
+        dfs(root);
+        // root等于null时，ans是MAX
+        return root == null ? 0: res;
+    }
+
+    public void dfs(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        cnt += 1;
+        if(root.left == root.right){
+            res = Math.min(res, cnt);
+            // cnt -= 1;		// 要么两句都不写，要么都写
+            // return;			
+        }
+        dfs(root.left);
+        dfs(root.right);
+        cnt -= 1;
+    }
+}
+```
+
+优化剪枝: 如果递归中发现*cnt*≥*ans*，由于继续向下递归也不会让*ans*变小，直接返回。
+
+```java
+class Solution {
+    int res = Integer.MAX_VALUE;
+    int cnt = 0;
+    public int minDepth(TreeNode root) {
+        dfs(root);
+        // root等于null时，ans是MAX
+        return root == null ? 0: res;
+    }
+
+    public void dfs(TreeNode root){
+        if(root == null){
+            return;
+        }
+		
+        // 剪纸，比深度当前最小还大的子树就没必要继续遍历了。
+        // 【注意，剪枝要写 cnt+=1 前面】
+        if(cnt + 1 >= res){
+            return;
+        }
+
+        cnt += 1;
+        if(root.left == root.right){
+            // 直接不用比较了
+            res = cnt;
+        }
+        dfs(root.left);
+        dfs(root.right);
+        cnt -= 1;
+    }
+}
+```
+
+
+
 ## 自底向上 普通递归
 
 递归表示以节点*node*为根的**子树**的最小深度。
 
-边界1：当前节点是空，那么节点数量是0
+
 
 一般子问题：当前节点非空，比较均非空的左右子树，min(左/右)+1
 
@@ -12,7 +79,9 @@
 
 ![image-20250221101654539](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202502211016585.png)
 
-边界2：那么设计有一个子树非空时，就直接取另一个子树的最小节点数量 + 1.
+边界1：当前节点是空，那么节点数量是0
+
+边界2：那么设计有一个子树非空时（比较0肯定更小），就直接取另一个子树的最小节点数量 + 1.
 
 ​	正好，还可以解决节点当前节点不空，左右均空的情况。
 
@@ -30,61 +99,10 @@ class Solution {
             return left == 0? right + 1: left + 1;
         }
         // 当前节点非空，左右都非空
-        return Math.min(left, right) + 1;
+        return Math.min(left, right) + 1;		// 不是如模板返回 max
     }
 }
 ```
 
 
-
-## 自顶向下 dfs
-
-```java
-class Solution {
-    int ans = Integer.MAX_VALUE;
-    public int minDepth(TreeNode root) {
-        dfs(root, 0);
-        return root == null? 0: ans;        // root等于null时，ans是MAX
-    }
-
-    public void dfs(TreeNode root, int cnt){
-        if(root == null){
-            return;
-        }
-        if(root.left == null && root.right == null){
-            ans = Math.min(ans, cnt + 1);
-            return;
-        }
-        f(root.left, cnt + 1);
-        f(root.right, cnt + 1);
-    }
-}
-```
-
-优化剪枝: 如果递归中发现*cnt*≥*ans*，由于继续向下递归也不会让*ans*变小，直接返回。
-
-```java
-class Solution {
-    int ans = Integer.MAX_VALUE;
-    public int minDepth(TreeNode root) {
-        dfs(root, 0);
-        return root == null? 0: ans;        // root等于null时，ans是MAX
-    }
-
-    public void dfs(TreeNode root, int cnt){
-        if(root == null){
-            return;
-        }
-        if(cnt + 1 >= ans){     // 剪纸，比深度当前最小还大的子树就没必要继续遍历了。
-            return;
-        }
-        if(root.left == null && root.right == null){
-            ans = cnt + 1;      // 直接不用比较了
-            return;
-        }
-        dfs(root.left, cnt + 1);
-        dfs(root.right, cnt + 1);
-    }
-}
-```
 
